{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 25,
  "lineage": "7eeadfd2-63e4-cd5e-449f-21f6c0e0025b",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:641189033470:internet-gateway/igw-008f8a21e0ab44e01",
            "id": "igw-008f8a21e0ab44e01",
            "owner_id": "641189033470",
            "tags": {
              "Enviroment": "dev",
              "Name": "dev-igw"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-064c0df9d268a88c1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:641189033470:route-table/rtb-0bf2516adbe1c12c6",
            "id": "rtb-0bf2516adbe1c12c6",
            "owner_id": "641189033470",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0732c60e336513426",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.2.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0c85e3a3282a744d2"
              }
            ],
            "tags": {
              "Enviroment": "dev",
              "Name": "dev-rtb-was"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Name": "dev-rtb-was"
            },
            "timeouts": null,
            "vpc_id": "vpc-064c0df9d268a88c1"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:641189033470:subnet/subnet-00d0379e8a4e74a04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.1.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d0379e8a4e74a04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "641189033470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviroment": "dev",
              "Name": "dev-was-subnet-a"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Name": "dev-was-subnet-a"
            },
            "vpc_id": "vpc-064c0df9d268a88c1"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:641189033470:subnet/subnet-07cf57f4d49058cbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.1.110.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07cf57f4d49058cbd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "641189033470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviroment": "dev",
              "Name": "dev-was-subnet-b"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Name": "dev-was-subnet-b"
            },
            "vpc_id": "vpc-064c0df9d268a88c1"
          }
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:641189033470:subnet/subnet-05e1c74c1e130e6ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.1.200.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e1c74c1e130e6ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "641189033470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviroment": "dev",
              "Name": "dev-db-subnet-a"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Name": "dev-db-subnet-a"
            },
            "vpc_id": "vpc-064c0df9d268a88c1"
          }
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:641189033470:subnet/subnet-09691a91b3cda75a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.1.210.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09691a91b3cda75a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "641189033470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviroment": "dev",
              "Name": "dev-db-subnet-b"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Name": "dev-db-subnet-b"
            },
            "vpc_id": "vpc-064c0df9d268a88c1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:641189033470:subnet/subnet-0790c9adcead8e05c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0790c9adcead8e05c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "641189033470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviroment": "dev",
              "Name": "dev-public-subnet-a"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Name": "dev-public-subnet-a"
            },
            "vpc_id": "vpc-064c0df9d268a88c1"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:641189033470:subnet/subnet-04d3db533f37eb434",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.1.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d3db533f37eb434",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "641189033470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviroment": "dev",
              "Name": "dev-public-subnet-b"
            },
            "tags_all": {
              "Enviroment": "dev",
              "Name": "dev-public-subnet-b"
            },
            "vpc_id": "vpc-064c0df9d268a88c1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:641189033470:vpc/vpc-064c0df9d268a88c1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0e83b9910806c07ad",
            "default_route_table_id": "rtb-07dacef9cdae1c0ab",
            "default_security_group_id": "sg-0119b7f8b318c4419",
            "dhcp_options_id": "dopt-04170311923d771c0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-064c0df9d268a88c1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07dacef9cdae1c0ab",
            "owner_id": "641189033470",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}